# chunky-monkey

./: Cargo.toml  README.md  chunky-monkey.toml
core/chunker-core/: Cargo.toml
core/chunker-core/src/: chunker.rs  config.rs  estimator.rs  lib.rs  optimizer.rs
core/server/: Cargo.toml
core/server/src/: main.rs
sdk/java/: pom.xml
sdk/java/src/main/java/com/chunkymonkey/: ChunkyMonkey.java
sdk/python/: pyproject.toml
sdk/python/src/chunky_monkey/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
